feat(surface): Implement surface flux and it's identical with Fortran VVM

--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries(vvm_driver
     vvm_io
     vvm_utils
     vvm_turbulence
+    vvm_surface
 )
 
 target_include_directories(vvm_driver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
