--- a/src/physics/CMakeLists.txt
+++ b/src/physics/CMakeLists.txt
@@ -3,3 +3,4 @@ add_library(eamxx_physics INTERFACE)
 add_subdirectory(p3)
 add_subdirectory(rrtmgp)
 add_subdirectory(turbulence)
+add_subdirectory(surface)
