--- a/rundata/input_configs/default_config.json
+++ b/rundata/input_configs/default_config.json
@@ -31,12 +31,13 @@
         "output_filename_prefix": "vvm_output",
         "fields_to_output": [
             "thbar", "pibar", "rhobar", "rhobar_up",
-            "htflx_sfc",
+            "htflx_sfc", "topo", "topou", "topov", "VEN2D",
             "u", "v", "w", "th", "xi", "eta", "zeta",
             "qv", "qc", "qr", "qi",
             "sw_heating", "lw_heating", "net_heating",
             "net_sw_flux", "net_lw_flux",
-            "precip_liq_surf_flux", "precip_ice_surf_flux"
+            "precip_liq_surf_flux", "precip_ice_surf_flux",
+            "sfc_flux_th"
         ],
         "output_grid": {
             "x_start": 0,
@@ -256,7 +257,8 @@
             "enable_turbulence": true
         },
         "surface": {
-            "enable_surface": true
+            "enable_surface": true,
+            "frequency_step": 1
         }
     },
     "optimization": {
