--- a/rundata/input_configs/default_config.json
+++ b/rundata/input_configs/default_config.json
@@ -1,23 +1,23 @@
 {
     "grid": {
-        "nx": 32,
-        "ny": 32,
+        "nx": 256,
+        "ny": 256,
         "nz": 33,
         "n_halo_cells": 2,
-        "dx": 500.0,
-        "dy": 500.0,
+        "dx": 2000.0,
+        "dy": 2000.0,
         "dz": 500.0,
         "dz1": 100.0
     },
     "simulation": {
-        "total_time_s": 200.0,
-        "dt_s": 1.0,
-        "output_interval_s": 1.0
+        "total_time_s": 1000.0,
+        "dt_s": 5.0,
+        "output_interval_s": 50.0
     },
     "initial_conditions": {
         "format": "txt",
         "source_file": "/home/mog/Aaron/VVM_GPU_CPP_dev/rundata/initial_conditions/profile_p3.txt",
-        "perturbation": "bubble"
+        "perturbation": "none"
     },
     "netcdf_reader": {
         "source_file": "/home/mog/Aaron/VVM_GPU_CPP_dev/rundata/TOPO.nc",
@@ -26,7 +26,7 @@
         }
     },
     "output": {
-        "output_dir": "/home/mog/Aaron/VVM_GPU_CPP_dev/output/profile_test",
+        "output_dir": "/home/mog/Aaron/VVM_GPU_CPP_dev/output/surface_flux",
         "enable_netcdf": true,
         "output_filename_prefix": "vvm_output",
         "fields_to_output": [
@@ -52,7 +52,7 @@
         "solver": {
             "w_solver_method": "tridiagonal",
             "_w_solver_method_options": "Choose 'tridiagonal' (original) or 'jacobi' (3D parallel)",
-            "iteration": 200,
+            "iteration": 50,
             "WRXMU": 2.5e-7
         },
         "filters": {
@@ -239,18 +239,18 @@
     },
     "physics": {
         "p3": {
-            "enable_p3": false,
+            "enable_p3": true,
             "do_predict_nc": true,
             "do_prescribed_ccn": false,
             "max_total_ni": 740.0e3
         },
         "rrtmgp": {
-            "enable_rrtmgp": false,
+            "enable_rrtmgp": true,
             "column_chunk_size": 512,
             "rad_frequency_step": 120,
             "active_gases": ["h2o", "co2", "o3", "n2o", "co", "ch4", "o2", "n2"],
-            "fixed_total_solar_irradiance": 340,
-            "fixed_solar_zenith_angle": -9999,
+            "fixed_total_solar_irradiance": 551.58,
+            "fixed_solar_zenith_angle": 0.74256,
             "pool_size_multiplier": 1.933
         },
         "turbulence": {
