--- a/rundata/input_configs/default_config.json
+++ b/rundata/input_configs/default_config.json
@@ -1,7 +1,7 @@
 {
     "grid": {
-        "nx": 512,
-        "ny": 512,
+        "nx": 2048,
+        "ny": 2048,
         "nz": 33,
         "n_halo_cells": 2,
         "dx": 2000.0,
@@ -10,27 +10,27 @@
         "dz1": 100.0
     },
     "simulation": {
-        "total_time_s": 1500.0,
+        "total_time_s": 200.0,
         "dt_s": 5.0,
-        "output_interval_s": 5.0
+        "output_interval_s": 50.0
     },
     "initial_conditions": {
         "format": "txt",
-        "source_file": "/work/aaron900129/VVM_GPU_CPP/rundata/initial_conditions/profile_p3.txt",
-        "perturbation": "bubble"
+        "source_file": "/home/mog/VVM_GPU_CPP/rundata/initial_conditions/profile_p3.txt",
+        "perturbation": "none"
     },
     "netcdf_reader": {
-        "source_file": "/work/aaron900129/VVM_GPU_CPP/rundata/init.nc",
+        "source_file": "/home/mog/VVM_GPU_CPP/rundata/init.nc",
         "variables_to_read": {
             "2d": ["topo", "Tg"]
         }
     },
     "output": {
-        "output_dir": "/work/aaron900129/VVM_GPU_CPP/output/bubble",
+        "output_dir": "/raid/mog/surface_flux_5000_seed1129",
         "engine": "SST",
         "queue_limit": 20,
-        "data_transport": "WAN",
-        "__data_transport": "RDMA or WAN",
+        "data_transport": "",
+        "__data_transport": "RDMA (for machines with infinite band), WAN (using network), and empty (for single node auto design by ADIOS2) ",
         "enable_netcdf": true,
         "output_filename_prefix": "vvm_output",
         "fields_to_output": [
@@ -70,7 +70,7 @@
                 "amplitude": 1,
                 "z_start_m": 0,
                 "z_end_m": 2000,
-                "random_seed": 1116
+                "random_seed": 1129
             }
         },
         "prognostic_variables": {
@@ -106,7 +106,7 @@
                         "spatial_scheme": "Takacs"
                     },
                     "coriolis": {
-                        "enable": true,
+                        "enable": false,
                         "temporal_scheme": "AdamsBashforth2",
                         "spatial_scheme": "Takacs"
                     }
@@ -135,7 +135,7 @@
                         "spatial_scheme": "Takacs"
                     },
                     "coriolis": {
-                        "enable": true,
+                        "enable": false,
                         "temporal_scheme": "AdamsBashforth2",
                         "spatial_scheme": "Takacs"
                     }
@@ -159,7 +159,7 @@
                         "spatial_scheme": "Takacs"
                     },
                     "coriolis": {
-                        "enable": true,
+                        "enable": false,
                         "temporal_scheme": "AdamsBashforth2",
                         "spatial_scheme": "Takacs"
                     }
